this might work

--- a/cloudformation/demo-stack.yaml
+++ b/cloudformation/demo-stack.yaml
@@ -2,73 +2,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Demo Custom CloudFormation Secret Provider
 Resources:
-  User:
-    Type: AWS::IAM::User
+  Topic:
+    Type: AWS::SNS::Topic
     Properties:
-      UserName: !Sub '${AWS::StackName}-secret-user'
+      TopicName: !Sub '${AWS::StackName}-topic'
 
-  AccessKey:
-    Type: Custom::AccessKey
+  Subscription:
+    Type: Custom::FilteredSNSSubscription
     Properties:
-      UserName: !Sub '${AWS::StackName}-secret-user'
-      ParameterPath: !Sub '/iam-users/${AWS::StackName}-secret-user'
-      Serial: 1
-      Status: Active
-      ReturnSecret: true
-      ReturnPassword: true
-      NoEcho: False
-      ServiceToken: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:binxio-cfn-secret-provider'
+      Endpoint: "test@example.com"
+      Protocol: "email"
+      TopicArn: !Ref Topic
+      FilterPolicy:
+        store:
+          - example_corp
+        event:
+          - order_cancelled
+          - order_placed
 
-  DBPassword:
-    Type: Custom::Secret
-    Properties:
-      Name: !Sub '/${AWS::StackName}/demo/PGPASSWORD'
-      Alphabet: abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_@#!
-      Length: 30
-      ReturnSecret: true
-      Version: v1
-      NoEcho: False
-      ServiceToken: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:binxio-cfn-secret-provider'
 
-  PrivateKey:
-    Type: Custom::RSAKey
-    Properties:
-      Name: !Sub '/${AWS::StackName}/demo/private-key'
-      Version: v1
-      NoEcho: False
-      ServiceToken: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:binxio-cfn-secret-provider'
-
-  KeyPair:
-    Type: Custom::KeyPair
-    DependsOn: PrivateKey
-    Properties:
-      Name: !Sub '${AWS::StackName}-custom-key-pair'
-      NoEcho: False
-      PublicKeyMaterial: !GetAtt 'PrivateKey.PublicKey'
-      ServiceToken: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:binxio-cfn-secret-provider'
-
-Outputs:
-  Secret:
-    Value: !GetAtt 'DBPassword.Secret'
-    Description: the generated secret, do expose this as Output Parameter in production
-  Arn:
-    Value: !GetAtt 'DBPassword.Arn'
-    Description: ARN of the password in the Parameter Store
-  PublicKey:
-    Value: !GetAtt 'PrivateKey.PublicKey'
-    Description: the public key, safe to expose
-  PrivateKeyArn:
-    Value: !GetAtt 'PrivateKey.Arn'
-    Description: ARN of the private key in the Parameter Store
-
-  SMTPPassword:
-    Value: !GetAtt 'AccessKey.SMTPPassword'
-    Description: SMTP password for the user
-
-  AccessSecretKey:
-    Value: !GetAtt 'AccessKey.SecretAccessKey'
-    Description: access secret key for the user
-
-  AccessSecretId:
-    Value: !Ref 'AccessKey'
-    Description: access secret id for the user
